@@ -2299,416 +2299,6 @@ call_sub(...)
 }
 
 SV*
-set_array_elements(...)
-  PPCODE:
-{
-  (void)RETVAL;
-  
-  SV* sv_env = ST(0);
-  SV* sv_array = ST(1);
-  SV* sv_values = ST(2);
-
-  // Env
-  SPVM_ENV* env = INT2PTR(SPVM_ENV*, SvIV(SvRV(sv_env)));
-  
-  // Runtime
-  SPVM_RUNTIME* runtime = (SPVM_RUNTIME*)env->runtime;
-
-  // Array must be SPVM::Data::Array object
-  if (!(SvROK(sv_array) && sv_derived_from(sv_array, "SPVM::Data::Array"))) {
-    croak("Array must be SPVM::Data::Array object");
-  }
-
-  // Get object
-  SPVM_OBJECT* array = SPVM_XS_UTIL_get_object(sv_array);
-  
-  // Values must be array reference
-  if (!(SvROK(sv_values) && sv_derived_from(sv_values, "ARRAY"))) {
-    croak("Values must be array refenrece");
-  }
-  
-  AV* av_values = (AV*)SvRV(sv_values);
-
-  int32_t length = env->get_array_length(env, array);
-
-  // Check length
-  if (av_len(av_values) + 1 != length) {
-    croak("Elements length must be same as array length");
-  }
-  
-  int32_t array_basic_type_id  = array->basic_type_id;
-  int32_t array_type_dimension = array->type_dimension;
-  int32_t is_array_type = array_type_dimension > 0;
-  
-  if (is_array_type) {
-    SPVM_RUNTIME_BASIC_TYPE* basic_type = &runtime->basic_types[array_basic_type_id];
-    int32_t element_type_dimension = array_type_dimension - 1;
-    
-    if (array->runtime_type == SPVM_TYPE_C_RUNTIME_TYPE_VALUE_ARRAY) {
-      for (int32_t index = 0; index < length; index++) {
-        SV** sv_value_ptr = av_fetch(av_values, index, 0);
-        SV* sv_value = sv_value_ptr ? *sv_value_ptr : &PL_sv_undef;
-
-        if (sv_derived_from(sv_value, "HASH")) {
-          
-          SPVM_RUNTIME_PACKAGE* package = &runtime->packages[basic_type->package_id];
-          assert(package);
-          
-          SPVM_RUNTIME_FIELD* first_field = &runtime->fields[package->fields_base];
-          assert(first_field);
-
-          void* elements = (void*)env->get_int_array_elements(env, array);
-          
-          HV* hv_value = (HV*)SvRV(sv_value);
-          int32_t field_length = package->fields_length;
-          for (int32_t field_index = 0; field_index < package->fields_length; field_index++) {
-            SPVM_RUNTIME_FIELD* field = &runtime->fields[package->fields_base + field_index];
-            const char* field_name = &runtime->string_pool[field->name_id];
-
-            SV** sv_field_value_ptr = hv_fetch(hv_value, field_name, strlen(field_name), 0);
-            SV* sv_field_value;
-            if (sv_field_value_ptr) {
-              sv_field_value = *sv_field_value_ptr;
-            }
-            else {
-              sv_field_value = sv_2mortal(newSViv(0));
-            }
-
-            switch (first_field->basic_type_id) {
-              case SPVM_BASIC_TYPE_C_ID_BYTE: {
-                ((SPVM_VALUE_byte*)elements)[(field_length * index) + field_index] = (SPVM_VALUE_byte)SvIV(sv_field_value);
-                break;
-              }
-              case SPVM_BASIC_TYPE_C_ID_SHORT: {
-                ((SPVM_VALUE_short*)elements)[(field_length * index) + field_index] = (SPVM_VALUE_short)SvIV(sv_field_value);
-                break;
-              }
-              case SPVM_BASIC_TYPE_C_ID_INT: {
-                ((SPVM_VALUE_int*)elements)[(field_length * index) + field_index] = (SPVM_VALUE_int)SvIV(sv_field_value);
-                break;
-              }
-              case SPVM_BASIC_TYPE_C_ID_LONG: {
-                ((SPVM_VALUE_long*)elements)[(field_length * index) + field_index] = (SPVM_VALUE_long)SvIV(sv_field_value);
-                break;
-              }
-              case SPVM_BASIC_TYPE_C_ID_FLOAT: {
-                ((SPVM_VALUE_float*)elements)[(field_length * index) + field_index] = (SPVM_VALUE_float)SvNV(sv_field_value);
-                break;
-              }
-              case SPVM_BASIC_TYPE_C_ID_DOUBLE: {
-                ((SPVM_VALUE_double*)elements)[(field_length * index) + field_index] = (SPVM_VALUE_double)SvNV(sv_field_value);
-                break;
-              }
-              default:
-                assert(0);
-            }
-          }
-        }
-        else {
-          croak("Element must be hash reference");
-        }
-      }
-    }
-    else if (array->runtime_type == SPVM_TYPE_C_RUNTIME_TYPE_OBJECT_ARRAY) {
-      for (int32_t index = 0; index < length; index++) {
-        SV** sv_value_ptr = av_fetch(av_values, index, 0);
-        SV* sv_value = sv_value_ptr ? *sv_value_ptr : &PL_sv_undef;
-        
-        if (!SvOK(sv_value)) {
-          env->set_object_array_element(env, array, index, NULL);
-        }
-        else if (sv_isobject(sv_value) && sv_derived_from(sv_value, "SPVM::Data")) {
-          SPVM_OBJECT* object = SPVM_XS_UTIL_get_object(sv_value);
-          
-          if (object->basic_type_id == array_basic_type_id && object->type_dimension == element_type_dimension) {
-            env->set_object_array_element(env, array, index, object);
-          }
-          else {
-            croak("Element is invalid object type");
-          }
-        }
-        else {
-          croak("Element must be SPVM::Data object");
-        }
-      }
-    }
-    else {
-      switch (array_basic_type_id) {
-        case SPVM_BASIC_TYPE_C_ID_BYTE: {
-          int8_t* elements = env->get_byte_array_elements(env, array);
-          {
-            int32_t i;
-            for (i = 0; i < length; i++) {
-              SV** sv_value_ptr = av_fetch(av_values, i, 0);
-              SV* sv_value = sv_value_ptr ? *sv_value_ptr : &PL_sv_undef;
-              elements[i] = (int8_t)SvIV(sv_value);
-            }
-          }
-          break;
-        }
-        case SPVM_BASIC_TYPE_C_ID_SHORT: {
-          int16_t* elements = env->get_short_array_elements(env, array);
-
-          {
-            int32_t i;
-            for (i = 0; i < length; i++) {
-              SV** sv_value_ptr = av_fetch(av_values, i, 0);
-              SV* sv_value = sv_value_ptr ? *sv_value_ptr : &PL_sv_undef;
-              elements[i] = (int16_t)SvIV(sv_value);
-            }
-          }
-          break;
-        }
-        case SPVM_BASIC_TYPE_C_ID_INT: {
-          int32_t* elements = env->get_int_array_elements(env, array);
-          {
-            int32_t i;
-            for (i = 0; i < length; i++) {
-              SV** sv_value_ptr = av_fetch(av_values, i, 0);
-              SV* sv_value = sv_value_ptr ? *sv_value_ptr : &PL_sv_undef;
-              elements[i] = (int32_t)SvIV(sv_value);
-            }
-          }
-          break;
-        }
-        case SPVM_BASIC_TYPE_C_ID_LONG: {
-          int64_t* elements = env->get_long_array_elements(env, array);
-          {
-            int32_t i;
-            for (i = 0; i < length; i++) {
-              SV** sv_value_ptr = av_fetch(av_values, i, 0);
-              SV* sv_value = sv_value_ptr ? *sv_value_ptr : &PL_sv_undef;
-              elements[i] = (int64_t)SvIV(sv_value);
-            }
-          }
-          break;
-        }
-        case SPVM_BASIC_TYPE_C_ID_FLOAT: {
-          float* elements = env->get_float_array_elements(env, array);
-          {
-            int32_t i;
-            for (i = 0; i < length; i++) {
-              SV** sv_value_ptr = av_fetch(av_values, i, 0);
-              SV* sv_value = sv_value_ptr ? *sv_value_ptr : &PL_sv_undef;
-              elements[i] = (float)SvNV(sv_value);
-            }
-          }
-          break;
-        }
-        case SPVM_BASIC_TYPE_C_ID_DOUBLE: {
-          double* elements = env->get_double_array_elements(env, array);
-          {
-            int32_t i;
-            for (i = 0; i < length; i++) {
-              SV** sv_value_ptr = av_fetch(av_values, i, 0);
-              SV* sv_value = sv_value_ptr ? *sv_value_ptr : &PL_sv_undef;
-              elements[i] = (double)SvNV(sv_value);
-            }
-          }
-          break;
-        }
-        default:
-          croak("Invalid type");
-      }
-    }
-  }
-  else {
-    croak("Argument must be array type");
-  }
-  
-  XSRETURN(0);
-}
-
-SV*
-set_array_elements_bin(...)
-  PPCODE:
-{
-  (void)RETVAL;
-  
-  SV* sv_env = ST(0);
-  SV* sv_array = ST(1);
-  SV* sv_bin = ST(2);
-  
-  // Env
-  SPVM_ENV* env = INT2PTR(SPVM_ENV*, SvIV(SvRV(sv_env)));
-  
-  // Runtime
-  SPVM_RUNTIME* runtime = (SPVM_RUNTIME*)env->runtime;
-
-  // Array must be SPVM::Data::Array object
-  if (!(SvROK(sv_array) && sv_derived_from(sv_array, "SPVM::Data::Array"))) {
-    croak("Array must be SPVM::Data::Array object");
-  }
-  
-  // Get object
-  SPVM_OBJECT* array = SPVM_XS_UTIL_get_object(sv_array);
-  
-  int32_t length = env->get_array_length(env, array);
-  int32_t basic_type_id = array->basic_type_id;
-  int32_t dimension = array->type_dimension;
-  int32_t is_array_type = dimension > 0;
-
-  if (is_array_type) {
-    SPVM_RUNTIME_BASIC_TYPE* basic_type = &runtime->basic_types[basic_type_id];
-    int32_t element_type_dimension = dimension - 1;
-    
-    if (array->runtime_type == SPVM_TYPE_C_RUNTIME_TYPE_VALUE_ARRAY) {
-      SPVM_RUNTIME_PACKAGE* package = &runtime->packages[basic_type->package_id];
-      assert(package);
-      
-      SPVM_RUNTIME_FIELD* first_field = &runtime->fields[package->fields_base];
-      assert(first_field);
-
-
-      int32_t field_length = package->fields_length;
-      
-      switch (first_field->basic_type_id) {
-        case SPVM_BASIC_TYPE_C_ID_BYTE: {
-          // Check range
-          if ((int32_t)sv_len(sv_bin) != field_length * length) {
-            croak("Data total byte size must be same as %d * array length", field_length);
-          }
-
-          int8_t* elements = env->get_byte_array_elements(env, array);
-          if (length > 0) {
-            memcpy(elements, SvPV_nolen(sv_bin), field_length * length);
-          }
-          break;
-        }
-        case SPVM_BASIC_TYPE_C_ID_SHORT: {
-          if ((int32_t)sv_len(sv_bin) != field_length * length * 2) {
-            croak("Data total byte size must be same as %d * array length * 2", field_length);
-          }
-          int16_t* elements = env->get_short_array_elements(env, array);
-          if (length > 0) {
-            memcpy(elements, SvPV_nolen(sv_bin), field_length * length * 2);
-          }
-          break;
-        }
-        case SPVM_BASIC_TYPE_C_ID_INT: {
-          if ((int32_t)sv_len(sv_bin) != field_length * length * 4) {
-            croak("Data total byte size must be same as %d * array length * 4", field_length);
-          }
-          int32_t* elements = env->get_int_array_elements(env, array);
-          if (length > 0) {
-            memcpy(elements, SvPV_nolen(sv_bin), field_length * length * 4);
-          }
-          break;
-        }
-        case SPVM_BASIC_TYPE_C_ID_LONG: {
-          if ((int32_t)sv_len(sv_bin) != field_length * length * 8) {
-            croak("Data total byte size must be same as %d * array length * 8", field_length);
-          }
-          int64_t* elements = env->get_long_array_elements(env, array);
-          if (length > 0) {
-            memcpy(elements, SvPV_nolen(sv_bin), field_length * length * 8);
-          }
-          break;
-        }
-        case SPVM_BASIC_TYPE_C_ID_FLOAT: {
-          if ((int32_t)sv_len(sv_bin) != field_length * length * 4) {
-            croak("Data total byte size must be same as %d * array length * 4", field_length);
-          }
-          float* elements = env->get_float_array_elements(env, array);
-          if (length > 0) {
-            memcpy(elements, SvPV_nolen(sv_bin), field_length * length * 4);
-          }
-          break;
-        }
-        case SPVM_BASIC_TYPE_C_ID_DOUBLE: {
-          if ((int32_t)sv_len(sv_bin) != field_length * length * 8) {
-            croak("Data total byte size must be same as %d * array length * 8", field_length);
-          }
-          double* elements = env->get_double_array_elements(env, array);
-          if (length > 0) {
-            memcpy(elements, SvPV_nolen(sv_bin), field_length * length * 8);
-          }
-          break;
-        }
-        default:
-          assert(0);
-      }
-    }
-    else if (array->runtime_type == SPVM_TYPE_C_RUNTIME_TYPE_OBJECT_ARRAY) {
-      croak("Object array is not supported");
-    }
-    else {
-      switch (basic_type_id) {
-        case SPVM_BASIC_TYPE_C_ID_BYTE: {
-          // Check range
-          if ((int32_t)sv_len(sv_bin) != length) {
-            croak("Data total byte size must be same as array length");
-          }
-
-          int8_t* elements = env->get_byte_array_elements(env, array);
-          if (length > 0) {
-            memcpy(elements, SvPV_nolen(sv_bin), length);
-          }
-          break;
-        }
-        case SPVM_BASIC_TYPE_C_ID_SHORT: {
-          if ((int32_t)sv_len(sv_bin) != length * 2) {
-            croak("Data total byte size must be same as array length * 2");
-          }
-          int16_t* elements = env->get_short_array_elements(env, array);
-          if (length > 0) {
-            memcpy(elements, SvPV_nolen(sv_bin), length * 2);
-          }
-          break;
-        }
-        case SPVM_BASIC_TYPE_C_ID_INT: {
-          if ((int32_t)sv_len(sv_bin) != length * 4) {
-            croak("Data total byte size must be same as array length * 4");
-          }
-          int32_t* elements = env->get_int_array_elements(env, array);
-          if (length > 0) {
-            memcpy(elements, SvPV_nolen(sv_bin), length * 4);
-          }
-          break;
-        }
-        case SPVM_BASIC_TYPE_C_ID_LONG: {
-          if ((int32_t)sv_len(sv_bin) != length * 8) {
-            croak("Data total byte size must be same as array length * 8");
-          }
-          int64_t* elements = env->get_long_array_elements(env, array);
-          if (length > 0) {
-            memcpy(elements, SvPV_nolen(sv_bin), length * 8);
-          }
-          break;
-        }
-        case SPVM_BASIC_TYPE_C_ID_FLOAT: {
-          if ((int32_t)sv_len(sv_bin) != length * 4) {
-            croak("Data total byte size must be same as array length * 4");
-          }
-          float* elements = env->get_float_array_elements(env, array);
-          if (length > 0) {
-            memcpy(elements, SvPV_nolen(sv_bin), length * 4);
-          }
-          break;
-        }
-        case SPVM_BASIC_TYPE_C_ID_DOUBLE: {
-          if ((int32_t)sv_len(sv_bin) != length * 8) {
-            croak("Data total byte size must be same as array length * 8");
-          }
-          double* elements = env->get_double_array_elements(env, array);
-          if (length > 0) {
-            memcpy(elements, SvPV_nolen(sv_bin), length * 8);
-          }
-          break;
-        }
-        default:
-          assert(0);
-      }
-    }
-  }
-  else {
-    croak("Argument must be array type");
-  }
-  
-  XSRETURN(0);
-}
-
-SV*
 set_array_element(...)
   PPCODE:
 {
